--- a/jax 101 code only.ipynb
+++ b/jax 101 code only.ipynb
@@ -4,12 +4,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "This is code only notebook of jax intro. Let's start by reducing error message size as we'll cause them for educational purposes."
+        "This is code only notebook of jax intro."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
@@ -21,6 +21,7 @@
         }
       ],
       "source": [
+        "# Reduce error message size\n",
         "%xmode minimal"
       ]
     },
