Defining your own model

--- a/Flax/Flax basics.ipynb
+++ b/Flax/Flax basics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,6 +327,105 @@
    "source": [
     "## Module basics"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized parameter shape:\n",
+      " {'params': {'layers_0': {'bias': (3,), 'kernel': (4, 3)}, 'layers_1': {'bias': (4,), 'kernel': (3, 4)}, 'layers_2': {'bias': (5,), 'kernel': (4, 5)}}}\n",
+      "Output:\n",
+      " (4, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# nn.Module is dataclass\n",
+    "class ExplicitMLP(nn.Module):\n",
+    "    features: Sequence[int]\n",
+    "    \n",
+    "    # called at the end of __post_init__\n",
+    "    def setup(self):\n",
+    "        self.layers = [nn.Dense(feat) for feat in self.features]\n",
+    "        \n",
+    "    def __call__(self, inputs):\n",
+    "        x = inputs\n",
+    "        for i, lyr in enumerate(self.layers):\n",
+    "            x = lyr(x)\n",
+    "            if i != len(self.layers) - 1:\n",
+    "                x = nn.relu(x)\n",
+    "        return x\n",
+    "    \n",
+    "\n",
+    "key1, key2 = random.split(random.PRNGKey(0), 2)\n",
+    "x = random.uniform(key1, (4, 4))\n",
+    "\n",
+    "model = ExplicitMLP(features=[3, 4, 5])\n",
+    "params = model.init(key2, x)\n",
+    "y = model.apply(params, x)\n",
+    "\n",
+    "print('Initialized parameter shape:\\n', jax.tree_util.tree_map(jnp.shape, params))\n",
+    "print('Output:\\n', y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized parameters:\n",
+      " {'params': {'layer_0': {'bias': (3,), 'kernel': (4, 3)}, 'layer_1': {'bias': (4,), 'kernel': (3, 4)}, 'layer_2': {'bias': (5,), 'kernel': (4, 5)}}}\n",
+      "Output shape:\n",
+      " (4, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class SimpleMLP(nn.Module):\n",
+    "    features: Sequence[int]\n",
+    "    \n",
+    "    @nn.compact\n",
+    "    def __call__(self, inputs):\n",
+    "        x = inputs\n",
+    "        for i, feat in enumerate(self.features):\n",
+    "            x = nn.Dense(feat, name=f\"layer_{i}\")(x)\n",
+    "            if i != len(self.features) - 1:\n",
+    "                x = nn.relu(x)\n",
+    "        return x\n",
+    "        \n",
+    "key1, key2 = jax.random.split(jax.random.PRNGKey(0), 2)\n",
+    "x = jax.random.normal(key1, (4, 4))\n",
+    "\n",
+    "model = SimpleMLP(features=[3, 4, 5])\n",
+    "params = model.init(key2, x)\n",
+    "y = model.apply(params, x)\n",
+    "\n",
+    "print('Initialized parameters:\\n', jax.tree_util.tree_map(jnp.shape, params))\n",
+    "print('Output shape:\\n', y.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Module parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
