TrainState with variables.

--- a/Flax/Flax basics.ipynb
+++ b/Flax/Flax basics.ipynb
@@ -782,10 +782,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "See `Batch Norm.ipynb` for TrainStep with variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
