Multiple dropout layers

--- a/Flax/Dropout.ipynb
+++ b/Flax/Dropout.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,13 @@
     "noise = jax.random.normal(noise_key, (100, 1))\n",
     "W, b = 2, -1\n",
     "ys = xs + noise + b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Single Dropout"
    ]
   },
   {
@@ -139,6 +146,111 @@
    "source": [
     "print(state.key)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multiple Dropout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyModelMultiple(nn.Module):\n",
+    "    num_neurons: int\n",
+    "    \n",
+    "    @nn.compact\n",
+    "    def __call__(self, x, training: bool, rngs):\n",
+    "        rng1, rng2, rng3 = rngs['dropout']\n",
+    "        x = nn.Dense(self.num_neurons)(x)\n",
+    "        x = nn.Dropout(rate=0.5, deterministic=not training, rng=rng1)(x)\n",
+    "        x = nn.Dropout(rate=0.5, deterministic=not training, rng=rng2)(x)\n",
+    "        x = nn.Dropout(rate=0.5, deterministic=not training, rng=rng3)(x)\n",
+    "        return x\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@jax.jit\n",
+    "def train_step(state: TrainState, xs, ys, dropout_key):\n",
+    "    dropout_train_key = jax.random.fold_in(\n",
+    "        key=dropout_key, data=state.step)\n",
+    "    rngs = jax.random.split(dropout_train_key, 3)\n",
+    "    \n",
+    "    def loss_fn(params):\n",
+    "        yhats = state.apply_fn(\n",
+    "            {'params': params}, xs, training=True, \n",
+    "            rngs={'dropout': rngs})\n",
+    "        loss = jnp.mean((ys - yhats) ** 2)\n",
+    "        return loss\n",
+    "    \n",
+    "    grad_fn = jax.value_and_grad(loss_fn)\n",
+    "    loss, grads = grad_fn(state.params)\n",
+    "    state = state.apply_gradients(grads=grads)\n",
+    "    return state, loss\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Module.init() got multiple values for argument 'rngs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[129], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m model \u001b[39m=\u001b[39m MyModelMultiple(num_neurons\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m)\n\u001b[1;32m      2\u001b[0m rng1, rng2, rng3 \u001b[39m=\u001b[39m jax\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39msplit(dropout_key, \u001b[39m3\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m variables \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39;49minit(params_key, xs, training\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[1;32m      4\u001b[0m                        rngs\u001b[39m=\u001b[39;49m{\u001b[39m'\u001b[39;49m\u001b[39mdropout\u001b[39;49m\u001b[39m'\u001b[39;49m: (rng1, rng2, rng3)})\n\u001b[1;32m      5\u001b[0m params \u001b[39m=\u001b[39m variables[\u001b[39m'\u001b[39m\u001b[39mparams\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m      7\u001b[0m state \u001b[39m=\u001b[39m TrainState\u001b[39m.\u001b[39mcreate(\n\u001b[1;32m      8\u001b[0m     apply_fn\u001b[39m=\u001b[39mmodel\u001b[39m.\u001b[39mapply,\n\u001b[1;32m      9\u001b[0m     params\u001b[39m=\u001b[39mparams,\n\u001b[1;32m     10\u001b[0m     key\u001b[39m=\u001b[39mdropout_key,\n\u001b[1;32m     11\u001b[0m     tx\u001b[39m=\u001b[39moptax\u001b[39m.\u001b[39madam(\u001b[39m1e-3\u001b[39m),\n\u001b[1;32m     12\u001b[0m )\n",
+      "File \u001b[0;32m~/miniconda3/envs/jax/lib/python3.11/site-packages/jax/_src/traceback_util.py:166\u001b[0m, in \u001b[0;36mapi_boundary.<locals>.reraise_with_filtered_traceback\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    164\u001b[0m __tracebackhide__ \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    165\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 166\u001b[0m   \u001b[39mreturn\u001b[39;00m fun(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    167\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m    168\u001b[0m   mode \u001b[39m=\u001b[39m _filtering_mode()\n",
+      "\u001b[0;31mTypeError\u001b[0m: Module.init() got multiple values for argument 'rngs'"
+     ]
+    }
+   ],
+   "source": [
+    "model = MyModelMultiple(num_neurons=3)\n",
+    "rng1, rng2, rng3 = jax.random.split(dropout_key, 3)\n",
+    "variables = model.init(params_key, xs, training=False,\n",
+    "                       rngs={'dropout': (rng1, rng2, rng3)})\n",
+    "params = variables['params']\n",
+    "\n",
+    "state = TrainState.create(\n",
+    "    apply_fn=model.apply,\n",
+    "    params=params,\n",
+    "    key=dropout_key,\n",
+    "    tx=optax.adam(1e-3),\n",
+    ")\n",
+    "\n",
+    "for i in range(1001):\n",
+    "    state, loss = train_step(state, xs, ys, dropout_key)\n",
+    "    if i % 100 == 0:\n",
+    "        print(f'Iteration {i}: {loss}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
