Use different keys across different Dropout.

--- a/Flax/Dropout.ipynb
+++ b/Flax/Dropout.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -156,27 +163,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Optional\n",
+    "from flax.linen.stochastic import KeyArray\n",
+    "from flax.training import train_state\n",
+    "from jax import random\n",
+    "from jax import lax\n",
+    "from flax.linen.module import merge_param\n",
+    "from typing import Sequence\n",
+    "\n",
+    "\n",
+    "class TrainState(train_state.TrainState):\n",
+    "  key: jax.random.KeyArray\n",
+    "\n",
+    "\n",
     "class MyModelMultiple(nn.Module):\n",
     "    num_neurons: int\n",
     "    \n",
     "    @nn.compact\n",
-    "    def __call__(self, x, training: bool, rngs):\n",
-    "        rng1, rng2, rng3 = rngs['dropout']\n",
+    "    def __call__(self, x, training: bool):\n",
     "        x = nn.Dense(self.num_neurons)(x)\n",
-    "        x = nn.Dropout(rate=0.5, deterministic=not training, rng=rng1)(x)\n",
-    "        x = nn.Dropout(rate=0.5, deterministic=not training, rng=rng2)(x)\n",
-    "        x = nn.Dropout(rate=0.5, deterministic=not training, rng=rng3)(x)\n",
+    "        x = nn.Dropout(rate=0.5, deterministic=not training, rng_collection='drop1')(x)\n",
+    "        x = nn.Dropout(rate=0.5, deterministic=not training, rng_collection='drop2')(x)\n",
+    "        x = nn.Dropout(rate=0.5, deterministic=not training, rng_collection='drop3')(x)\n",
     "        return x\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,12 +203,12 @@
     "def train_step(state: TrainState, xs, ys, dropout_key):\n",
     "    dropout_train_key = jax.random.fold_in(\n",
     "        key=dropout_key, data=state.step)\n",
-    "    rngs = jax.random.split(dropout_train_key, 3)\n",
+    "    dkey1, dkey2, dkey3 = jax.random.split(dropout_train_key, 3)\n",
     "    \n",
     "    def loss_fn(params):\n",
     "        yhats = state.apply_fn(\n",
     "            {'params': params}, xs, training=True, \n",
-    "            rngs={'dropout': rngs})\n",
+    "            rngs={'drop1': dkey1, 'drop2': dkey2, 'drop3': dkey3})\n",
     "        loss = jnp.mean((ys - yhats) ** 2)\n",
     "        return loss\n",
     "    \n",
@@ -202,27 +221,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Module.init() got multiple values for argument 'rngs'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[129], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m model \u001b[39m=\u001b[39m MyModelMultiple(num_neurons\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m)\n\u001b[1;32m      2\u001b[0m rng1, rng2, rng3 \u001b[39m=\u001b[39m jax\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39msplit(dropout_key, \u001b[39m3\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m variables \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39;49minit(params_key, xs, training\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[1;32m      4\u001b[0m                        rngs\u001b[39m=\u001b[39;49m{\u001b[39m'\u001b[39;49m\u001b[39mdropout\u001b[39;49m\u001b[39m'\u001b[39;49m: (rng1, rng2, rng3)})\n\u001b[1;32m      5\u001b[0m params \u001b[39m=\u001b[39m variables[\u001b[39m'\u001b[39m\u001b[39mparams\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m      7\u001b[0m state \u001b[39m=\u001b[39m TrainState\u001b[39m.\u001b[39mcreate(\n\u001b[1;32m      8\u001b[0m     apply_fn\u001b[39m=\u001b[39mmodel\u001b[39m.\u001b[39mapply,\n\u001b[1;32m      9\u001b[0m     params\u001b[39m=\u001b[39mparams,\n\u001b[1;32m     10\u001b[0m     key\u001b[39m=\u001b[39mdropout_key,\n\u001b[1;32m     11\u001b[0m     tx\u001b[39m=\u001b[39moptax\u001b[39m.\u001b[39madam(\u001b[39m1e-3\u001b[39m),\n\u001b[1;32m     12\u001b[0m )\n",
-      "File \u001b[0;32m~/miniconda3/envs/jax/lib/python3.11/site-packages/jax/_src/traceback_util.py:166\u001b[0m, in \u001b[0;36mapi_boundary.<locals>.reraise_with_filtered_traceback\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    164\u001b[0m __tracebackhide__ \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    165\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 166\u001b[0m   \u001b[39mreturn\u001b[39;00m fun(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    167\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m    168\u001b[0m   mode \u001b[39m=\u001b[39m _filtering_mode()\n",
-      "\u001b[0;31mTypeError\u001b[0m: Module.init() got multiple values for argument 'rngs'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Init\n",
+      "* Training\n",
+      "Iteration 0: 18.363073348999023\n",
+      "Iteration 100: 18.308507919311523\n",
+      "Iteration 200: 15.345449447631836\n",
+      "Iteration 300: 13.417535781860352\n",
+      "Iteration 400: 8.60811996459961\n",
+      "Iteration 500: 16.940216064453125\n",
+      "Iteration 600: 10.679668426513672\n",
+      "Iteration 700: 6.271137237548828\n",
+      "Iteration 800: 6.719328880310059\n",
+      "Iteration 900: 8.08764362335205\n",
+      "Iteration 1000: 7.816141128540039\n"
      ]
     }
    ],
    "source": [
     "model = MyModelMultiple(num_neurons=3)\n",
     "rng1, rng2, rng3 = jax.random.split(dropout_key, 3)\n",
-    "variables = model.init(params_key, xs, training=False,\n",
-    "                       rngs={'dropout': (rng1, rng2, rng3)})\n",
+    "print(\"* Init\")\n",
+    "variables = model.init(params_key, xs, training=False)\n",
     "params = variables['params']\n",
     "\n",
     "state = TrainState.create(\n",
@@ -232,6 +258,7 @@
     "    tx=optax.adam(1e-3),\n",
     ")\n",
     "\n",
+    "print(\"* Training\")\n",
     "for i in range(1001):\n",
     "    state, loss = train_step(state, xs, ys, dropout_key)\n",
     "    if i % 100 == 0:\n",
