Fixed random number seed for multiple dropouts.

--- a/Flax/Dropout.ipynb
+++ b/Flax/Dropout.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,9 +22,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-08-08 20:51:55.994684: W pjrt_plugin/src/mps_client.cc:535] WARNING: JAX Apple GPU support is experimental and not all JAX functionality is correctly supported!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metal device set to: Apple M2 Max\n",
+      "\n",
+      "systemMemory: 96.00 GB\n",
+      "maxCacheSize: 36.00 GB\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "x_key, noise_key, params_key, dropout_key = jax.random.split(\n",
     "    jax.random.PRNGKey(0), 4)\n",
@@ -43,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,16 +205,16 @@
     "    @nn.compact\n",
     "    def __call__(self, x, training: bool):\n",
     "        x = nn.Dense(self.num_neurons)(x)\n",
-    "        x = nn.Dropout(rate=0.5, deterministic=not training, rng_collection='drop1')(x)\n",
-    "        x = nn.Dropout(rate=0.5, deterministic=not training, rng_collection='drop2')(x)\n",
-    "        x = nn.Dropout(rate=0.5, deterministic=not training, rng_collection='drop3')(x)\n",
+    "        x = nn.Dropout(rate=0.5, deterministic=not training)(x)\n",
+    "        x = nn.Dropout(rate=0.5, deterministic=not training)(x)\n",
+    "        x = nn.Dropout(rate=0.5, deterministic=not training)(x)\n",
     "        return x\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,12 +222,15 @@
     "def train_step(state: TrainState, xs, ys, dropout_key):\n",
     "    dropout_train_key = jax.random.fold_in(\n",
     "        key=dropout_key, data=state.step)\n",
-    "    dkey1, dkey2, dkey3 = jax.random.split(dropout_train_key, 3)\n",
     "    \n",
     "    def loss_fn(params):\n",
     "        yhats = state.apply_fn(\n",
     "            {'params': params}, xs, training=True, \n",
-    "            rngs={'drop1': dkey1, 'drop2': dkey2, 'drop3': dkey3})\n",
+    "            # Each of 'Dropout' layers in the model has unique 'scope name' which is\n",
+    "            # folded in when computing the random numbers. Thus, those\n",
+    "            # there layers are okay with sharing the same key.\n",
+    "            # If interested, see https://github.com/google/flax/discussions/3262.\n",
+    "            rngs={'dropout': dropout_train_key})\n",
     "        loss = jnp.mean((ys - yhats) ** 2)\n",
     "        return loss\n",
     "    \n",
@@ -221,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -230,17 +252,17 @@
      "text": [
       "* Init\n",
       "* Training\n",
-      "Iteration 0: 18.363073348999023\n",
-      "Iteration 100: 18.308507919311523\n",
-      "Iteration 200: 15.345449447631836\n",
-      "Iteration 300: 13.417535781860352\n",
-      "Iteration 400: 8.60811996459961\n",
-      "Iteration 500: 16.940216064453125\n",
-      "Iteration 600: 10.679668426513672\n",
-      "Iteration 700: 6.271137237548828\n",
-      "Iteration 800: 6.719328880310059\n",
-      "Iteration 900: 8.08764362335205\n",
-      "Iteration 1000: 7.816141128540039\n"
+      "Iteration 0: 31.82681655883789\n",
+      "Iteration 100: 16.837251663208008\n",
+      "Iteration 200: 16.39636993408203\n",
+      "Iteration 300: 13.929004669189453\n",
+      "Iteration 400: 10.109065055847168\n",
+      "Iteration 500: 13.120767593383789\n",
+      "Iteration 600: 9.250357627868652\n",
+      "Iteration 700: 10.172189712524414\n",
+      "Iteration 800: 8.768033981323242\n",
+      "Iteration 900: 10.029900550842285\n",
+      "Iteration 1000: 3.9830234050750732\n"
      ]
     }
    ],
