--- a/Flax/metrics_lib.ipynb
+++ b/Flax/metrics_lib.ipynb
@@ -15,16 +15,17 @@
    "source": [
     "import jax\n",
     "import jax.numpy as jnp\n",
+    "from jax import Array\n",
+    "\n",
     "\n",
     "# If micro precision is used for imbalanced data, the contributions from the majority\n",
     "# class will dominate. Macro avoids it.\n",
-    "def macro_precision(y_true, y_pred):\n",
+    "def macro_precision(y_true: Array, y_pred: Array) -> Array:\n",
     "    threshold = 0.5\n",
     "    y_pred = jnp.where(y_pred > threshold, 1.0, 0.0)\n",
     "\n",
     "    precisions = []\n",
     "\n",
-    "    # Get precision for each class and then average them.\n",
     "    for i in range(y_true.shape[1]):\n",
     "        class_true = y_true[:, i]\n",
     "        class_pred = y_pred[:, i]\n",
@@ -34,16 +35,17 @@
     "        precisions.append(precision)\n",
     "    return jnp.mean(jnp.stack(precisions))\n",
     "\n",
-    "\n",
     "# When both alpha (class weights) and gamma (focusing parameter) are used,\n",
     "# it's the most effective. I use `compute_class_weight` from sklearn to compute\n",
     "# alpha.\n",
-    "def categorical_focal_cross_entropy(logits, labels_one_hot, alpha, gamma=2.0):\n",
+    "def categorical_focal_cross_entropy(\n",
+    "    labels_one_hot: Array, logits: Array, alpha: Array, gamma: float = 2.0\n",
+    ") -> Array:\n",
     "    probs = jax.nn.softmax(logits)\n",
     "    p_t = jnp.sum(probs * labels_one_hot, axis=-1)\n",
     "    alpha_t = alpha[jnp.argmax(labels_one_hot, axis=-1)]\n",
     "    loss = -alpha_t * jnp.power(1 - p_t, gamma) * jnp.log(p_t + 1e-10)\n",
-    "    return jnp.mean(loss)\n"
+    "    return jnp.mean(loss)"
    ]
   }
  ],
