--- a/hashable_params.ipynb
+++ b/hashable_params.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,24 +153,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Array(2, dtype=int32, weak_type=True)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "Cannot interpret value of type <class 'function'> as an abstract array; it does not have a dtype attribute",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/miniconda3/envs/jax/lib/python3.11/site-packages/jax/_src/api_util.py:581\u001b[0m, in \u001b[0;36mshaped_abstractify\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m    580\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 581\u001b[0m   \u001b[39mreturn\u001b[39;00m _shaped_abstractify_handlers[\u001b[39mtype\u001b[39;49m(x)](x)\n\u001b[1;32m    582\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n",
+      "\u001b[0;31mKeyError\u001b[0m: <class 'function'>",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mf\u001b[39m(a, b):\n\u001b[1;32m      8\u001b[0m     \u001b[39mreturn\u001b[39;00m a \u001b[39m+\u001b[39m b\n\u001b[0;32m---> 10\u001b[0m foo(\u001b[39m1\u001b[39;49m, f)\n",
+      "    \u001b[0;31m[... skipping hidden 6 frame]\u001b[0m\n",
+      "File \u001b[0;32m~/miniconda3/envs/jax/lib/python3.11/site-packages/jax/_src/api_util.py:572\u001b[0m, in \u001b[0;36m_shaped_abstractify_slow\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m    570\u001b[0m   dtype \u001b[39m=\u001b[39m dtypes\u001b[39m.\u001b[39mcanonicalize_dtype(x\u001b[39m.\u001b[39mdtype, allow_extended_dtype\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m    571\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 572\u001b[0m   \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\n\u001b[1;32m    573\u001b[0m       \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mCannot interpret value of type \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mtype\u001b[39m(x)\u001b[39m}\u001b[39;00m\u001b[39m as an abstract array; it \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    574\u001b[0m       \u001b[39m\"\u001b[39m\u001b[39mdoes not have a dtype attribute\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    575\u001b[0m \u001b[39mreturn\u001b[39;00m core\u001b[39m.\u001b[39mShapedArray(np\u001b[39m.\u001b[39mshape(x), dtype, weak_type\u001b[39m=\u001b[39mweak_type,\n\u001b[1;32m    576\u001b[0m                         named_shape\u001b[39m=\u001b[39mnamed_shape)\n",
+      "\u001b[0;31mTypeError\u001b[0m: Cannot interpret value of type <class 'function'> as an abstract array; it does not have a dtype attribute"
+     ]
     }
    ],
    "source": [
     "from functools import partial\n",
     "\n",
-    "@partial(jax.jit, static_argnames=[\"f\"])\n",
+    "# Jax expects f to be array\n",
+    "@partial(jax.jit)\n",
     "def foo(x, f):\n",
     "    return f(x, x)\n",
     "\n",
@@ -182,16 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array(3, dtype=int32, weak_type=True)"
+       "Array(2, dtype=int32, weak_type=True)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,14 +207,15 @@
    "source": [
     "from functools import partial\n",
     "\n",
+    "# Make f as static_argnames\n",
     "@partial(jax.jit, static_argnames=[\"f\"])\n",
     "def foo(x, f):\n",
-    "    return f(x)\n",
+    "    return f(x, x)\n",
     "\n",
     "def f(a, b):\n",
     "    return a + b\n",
     "\n",
-    "foo(1, partial(f, b=2))"
+    "foo(1, f)"
    ]
   },
   {
